feat: add function to generate grid
Add a function which will be generating rows and squares depending
on the number input.
With flexbox-styling the squares will be exactly the same height and
width and fill out the whole container-div.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
     <!--Script for Functionality-->
-    <srcipt src="javascript.js"></srcipt>
+    <script src="javascript.js"></script>
 </body>
 
 </html>
