fix: unfinished saves in index.html and style.css
saving was forgotten in the previous commit

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="header">
         <div class="header-text">
             <h1>Etch-A-Sketch</h1>
-            <p>A interactive drawing pad project for "The Odin Project"</p>
+            <p>A interactive drawing pad</p>
         </div>
         <div class="menu">
-            <button>Mülleimer</button>
-            <button>Neues Raster</button>
+            <button id="eraser">🗑️</button>
+            <button id="new-grid">Change Grid Size</button>
         </div>
     </div>
 
@@ -25,7 +25,7 @@
             <!--Here will be the grid-->
         </div>
         <div class="description">
-            <p>Here goes the description of the game.</p>
+            <p>Draw with hovering over the squares. With every hover the colors will change and the color will get darker. Have Fun!</p>
         </div>
     </div>
 
